[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/LabeledProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/SkillsUI/SkillsUI.gd" type="Script" id=3]
[ext_resource path="res://UI/SkillsUI/SkillStatLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=5]

[sub_resource type="Gradient" id=1]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[node name="SkillsUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="Control" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer"]
margin_right = 1272.0
margin_bottom = 207.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer"]
margin_right = 634.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 627.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 20.0
text = "Character info"

[node name="NameLabel" type="Label" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 620.0
margin_bottom = 44.0
text = "Rahi"

[node name="LevelBar" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 620.0
margin_bottom = 70.0
colorGradient = SubResource( 1 )
propertyName = "Level 1"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 620.0
margin_bottom = 78.0

[node name="DamageStatsLabel" type="RichTextLabel" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 620.0
margin_bottom = 103.0
bbcode_enabled = true
bbcode_text = "Test data"
text = "Test data"
fit_content_height = true

[node name="Vbox" type="VBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer"]
margin_left = 638.0
margin_right = 1272.0
margin_bottom = 207.0
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox"]
margin_right = 634.0
margin_bottom = 126.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 627.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer"]
margin_right = 620.0
margin_bottom = 20.0
text = "Primary stats"

[node name="FreeStatsLabel" type="Label" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 620.0
margin_bottom = 44.0
text = "Free stats: 0"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 620.0
margin_bottom = 52.0

[node name="AttribList" type="VBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer"]
margin_top = 56.0
margin_right = 620.0
margin_bottom = 82.0

[node name="SkillStatLine" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer/AttribList" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 620.0
margin_bottom = 26.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer"]
margin_top = 86.0
margin_right = 620.0
margin_bottom = 112.0

[node name="ApplyButton" type="Button" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_right = 61.0
margin_bottom = 26.0
text = "Apply"

[node name="CancelButton" type="Button" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 133.0
margin_bottom = 26.0
text = "Cancel"

[node name="SecondPanel" type="PanelContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox"]
margin_top = 130.0
margin_right = 634.0
margin_bottom = 207.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/SecondPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 627.0
margin_bottom = 70.0

[node name="ExtraStatsLabel" type="RichTextLabel" parent="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/SecondPanel/VBoxContainer"]
margin_right = 620.0
margin_bottom = 63.0
bbcode_enabled = true
bbcode_text = "asd
asd
asd"
text = "asd
asd
asd"
fit_content_height = true

[node name="GridContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 670.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 50 )
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="CloseButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 10.0
margin_right = 1270.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Close"

[connection signal="visibility_changed" from="." to="." method="_on_SkillsUI_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Stats/ScrollContainer/HBoxContainer/Vbox/PanelContainer2/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
